12-kubernetes-05-cni.md/access-to-hello-node-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-hello-node
  namespace: netology
spec:
  podSelector:
    matchLabels:
      app: hello-node
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: access
