12-kubernetes-05-cni.md/deny-all-be-default-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-by-default
  namespace: netology
spec:
  podSelector:
    matchLabels: {}
